# ksp_orbit_planner

./: .gitignore  Readme.md  constants.R
data/: Kerbal_System_Celestial_Body_Parameters_in_v0.18.2_-_Orbital_Elements.csv  ksp_params.csv
ksp-orbit-planner/: ksp-orbit-planner.cabal
ksp-orbit-planner/.stack-work/install/x86_64-linux/lts-4.0/7.10.3/flag-cache/: ksp-orbit-planner-0.1.0.0-67283bce8080477df697dca9bf1e3874  text-1.2.2.0-daec687352505adca80a15e023cbae5c
ksp-orbit-planner/.stack-work/install/x86_64-linux/lts-4.0/7.10.3/lib/x86_64-linux-ghc-7.10.3/ksp-orbit-planner-0.1.0.0-J64ctaILoGXG84u49vC4Sn/: Lib.dyn_hi
ksp-orbit-planner/.stack-work/install/x86_64-linux/lts-4.0/7.10.3/pkgdb/: ksp-orbit-planner-0.1.0.0-4f4fb2f4446cfa23bf21b5c99a0b5c73.conf  package.cache
ksp-orbit-planner/src/: Lib.hs
rScripts/: orbits.R
